# pyrtipc

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: client.py  server.py
pyrtipc/: __init__.py  attr.py  crtipc.pxd  rtipc.py
rtipc/: CMakeLists.txt  __init__.py  attr.py  config.py  rtipc.pxd  rtipc_wrapper.py
src/pyrtipc/: crtipc.pxd  rtipc.pyx
wrapper/: CMakeLists.txt  rtipc.pxd  rtipc_wrapper.py
