[build-system]
requires = ["scikit-build-core", "cython", "cython-cmake"]
build-backend = "scikit_build_core.build"



[project]
name = "pyrtipc"
version = "0.0.0"
authors = [{name = "Simon Maurer", email = "mail@maurer.systems"}]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
dynamic = ["description"]
dependencies = []

[project.urls]
Home = "https://github.com/mausys/pyrtipc"
