[build-system]
requires = ["scikit-build-core", "cython", "cython-cmake"]
build-backend = "scikit_build_core.build"

[project]
name = "pyrtipc"
version = "0.0.1"
authors = [{name = "Simon Maurer", email = "mail@maurer.systems"}]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
#dynamic = ["description"]

[project.urls]
Homepage = "https://rtipc.github.io"
Repository = "https://github.com/rtipc/pyrtipc"

[tool.scikit-build]
editable.mode = "inplace"

