[build-system]
requires = ["scikit-build-core", "cython", "cython-cmake", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "pyrtipc"
dynamic = ["description", "version"]
authors = [{name = "Simon Maurer", email = "mail@maurer.systems"}]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"

[project.urls]
Homepage = "https://rtipc.github.io"
Repository = "https://github.com/rtipc/pyrtipc"


[tool.scikit-build]
editable.mode = "inplace"


[[tool.dynamic-metadata]]
field = "version"
provider = "scikit_build_core.metadata.setuptools_scm"
